crates/runtime/tests/flight/snapshots/integration__flight__prepared_statements__flight_prepared_statements__case_simple_parameter_table_content.snap
---
source: crates/runtime/tests/flight/prepared_statements.rs
expression: results2_str
---
+--------+
| result |
+--------+
| bar    |
+--------+
