crates/runtime/tests/flight/snapshots/integration__flight__prepared_statements__flight_prepared_statements__case_when_parameter_false_table_content.snap
---
source: crates/runtime/tests/flight/prepared_statements.rs
expression: results3_str
---
+--------+
| result |
+--------+
| bar    |
+--------+
