crates/runtime/tests/flight/snapshots/integration__flight__prepared_statements__flight_prepared_statements__more_than_ten_parameters_table_content.snap
---
source: crates/runtime/tests/flight/prepared_statements.rs
expression: results_str
---
+----+-----+-----+-----+----+----+----+----+----+----+----+----+-----+-----+-----+
| $1 | $10 | $11 | $12 | $2 | $3 | $4 | $5 | $6 | $7 | $8 | $9 | $13 | $14 | $15 |
+----+-----+-----+-----+----+----+----+----+----+----+----+----+-----+-----+-----+
| 1  | 10  | 11  | 12  | 2  | 3  | 4  | 5  | 6  | 7  | 8  | 9  | 13  | 14  | 15  |
+----+-----+-----+-----+----+----+----+----+----+----+----+----+-----+-----+-----+
