crates/runtime/tests/flight/snapshots/integration__flight__prepared_statements__flight_prepared_statements__no_parameters_query.snap
---
source: crates/runtime/tests/flight/prepared_statements.rs
expression: results_str
---
+--------+
| result |
+--------+
| 2      |
+--------+
