crates/runtime/tests/flight/snapshots/integration__flight__prepared_statements__flight_prepared_statements__null_parameter_coalesce.snap
---
source: crates/runtime/tests/flight/prepared_statements.rs
expression: results_str
---
+---------------+
| result        |
+---------------+
| default_value |
+---------------+
