crates/runtime/tests/flight/snapshots/integration__flight__prepared_statements__flight_prepared_statements__session_isolation_session1_result.snap
---
source: crates/runtime/tests/flight/prepared_statements.rs
expression: results1_str
---
+----------------+
| source         |
+----------------+
| from_session_1 |
+----------------+
