crates/runtime/tests/flight/snapshots/integration__flight__prepared_statements__flight_prepared_statements__sql_prepare_execute_first_execution.snap
---
source: crates/runtime/tests/flight/prepared_statements.rs
expression: results_str
---
+---+---+
| a | b |
+---+---+
| 1 | a |
| 1 | a |
+---+---+
