crates/runtime/tests/flight/snapshots/integration__flight__prepared_statements__flight_prepared_statements__sql_prepare_execute_second_execution.snap
---
source: crates/runtime/tests/flight/prepared_statements.rs
expression: results2_str
---
+---+---+
| a | b |
+---+---+
| 2 | b |
| 2 | b |
+---+---+
